@@ -1,0 +1,128 @@
+/* libtinymail-camel - The Tiny Mail base library for Camel
+ * Copyright (C) 2006-2007 Philip Van Hoof <pvanhoof@gnome.org>
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	 See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with self library; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+#include <config.h>
+
+#include <glib/gi18n-lib.h>
+#include <glib.h>
+#include <string.h>
+#include <time.h>
+#include <tny-list.h>
+#include <tny-iterator.h>
+#include <tny-camel-queue-priv.h>
+#include <sys/stat.h>
+#include <sys/types.h>
+#include <errno.h>
+
+#include <tny-camel-shared.h>
+#include <tny-status.h>
+
+static GObjectClass *parent_class = NULL;
+
+#define TNY_CAMEL_QUEUE_GET_PRIVATE(o)	\
+	(G_TYPE_INSTANCE_GET_PRIVATE ((o), TNY_TYPE_CAMEL_QUEUE, TnyCamelQueuePriv))
+
+
+
+
+static void
+tny_camel_queue_finalize (GObject *object)
+{
+	TnyCamelQueue *self = (TnyCamelQueue*) object;
+
+	(*parent_class->finalize) (object);
+
+	return;
+}
+
+TnyCamelQueue*
+_tny_camel_queue_new (void)
+{
+	TnyCamelQueue *self = g_object_new (TNY_TYPE_CAMEL_QUEUE, NULL);
+
+	return TNY_CAMEL_QUEUE (self);
+}
+
+
+void 
+_tny_camel_queue_launch (TnyCamelQueue *queue, GThreadFunc func, gpointer data)
+{
+	g_thread_create (func, data, FALSE, NULL);
+}
+
+static void 
+tny_camel_queue_class_init (TnyCamelQueueClass *class)
+{
+	GObjectClass *object_class;
+
+	parent_class = g_type_class_peek_parent (class);
+	object_class = (GObjectClass*) class;
+
+	object_class->finalize = tny_camel_queue_finalize;
+
+	return;
+}
+
+
+static void
+tny_camel_queue_instance_init (GTypeInstance *instance, gpointer g_class)
+{
+	TnyCamelQueue *self = (TnyCamelQueue*)instance;
+
+	self->list = NULL;
+
+	return;
+}
+
+/**
+ * tny_camel_queue_get_type:
+ *
+ * GType system helper function
+ *
+ * Return value: a GType
+ **/
+GType 
+tny_camel_queue_get_type (void)
+{
+	static GType type = 0;
+
+	if (G_UNLIKELY(type == 0))
+	{
+	    static const GTypeInfo info = 
+		  {
+		  sizeof (TnyCamelQueueClass),
+		  NULL,   /* base_init */
+		  NULL,   /* base_finalize */
+		  (GClassInitFunc) tny_camel_queue_class_init, /* class_init */
+		  NULL,   /* class_finalize */
+		  NULL,   /* class_data */
+		  sizeof (TnyCamelQueue),
+		  0,      /* n_preallocs */
+		  tny_camel_queue_instance_init,    /* instance_init */
+		  NULL
+		};
+
+		type = g_type_register_static (G_TYPE_OBJECT,
+					       "TnyCamelQueue",
+					       &info, 0);
+	}
+
+	return type;
+}
+
