@@ -21,6 +21,7 @@
  */
 
 #include <tny-camel-store-account.h>
+#include "tny-camel-queue-priv.h"
 
 typedef struct _TnyCamelStoreAccountPriv TnyCamelStoreAccountPriv;
 
@@ -31,7 +32,8 @@ struct _TnyCamelStoreAccountPriv
 	GList *managed_folders;
 	TnyList *sobservers;
 	gboolean cant_reuse_iter;
-	GStaticRecMutex *factory_lock; 
+	GStaticRecMutex *factory_lock;
+	TnyCamelQueue *queue, *msg_queue;
 };
 
 #define TNY_CAMEL_STORE_ACCOUNT_GET_PRIVATE(o)	\
