@@ -2,6 +2,7 @@
 
 	* Preparing for a release candidate
 	* Added skeleton for webkit support
+	* Restructuring the internal API for async methods a bit
 
 2007-07-23  Murray Cumming  <murrayc@murrayc.com>
 
